@@ -1,17 +1,14 @@
 package de.uka.ilkd.key.smt.newsmt2;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+
 import de.uka.ilkd.key.logic.op.SortedOperator;
 import de.uka.ilkd.key.logic.sort.Sort;
-import de.uka.ilkd.key.proof.mgt.ProofStatus;
 import de.uka.ilkd.key.smt.SMTTranslationException;
 import de.uka.ilkd.key.smt.newsmt2.SExpr.Type;
 import de.uka.ilkd.key.smt.newsmt2.SMTHandlerProperty.BooleanProperty;
-import de.uka.ilkd.key.smt.newsmt2.SMTHandlerProperty.EnumProperty;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
 
 /**
  * A collection of static methods that {@link SMTHandler}s are likely to use.
@@ -43,11 +40,12 @@ public class HandlerUtil {
     public static final SMTHandlerProperty.BooleanProperty NO_QUANTIFIERS = new BooleanProperty(
         "NoQuantifiers", "Reduce the number of introduced universal quantifiers", "TODO");
 
+    /* add global handler properties here */
     /**
      * This lists the handler properties that do not belong to a particular SMT handler.
      */
     public static final List<? extends SMTHandlerProperty<?>> GLOBAL_PROPERTIES =
-        Arrays.asList(/* add global handler properties here */);
+        List.of();
 
     private HandlerUtil() {
         throw new Error("do not instantiate");
